- Added MessageSenderHistory for historical sending data for pooling calculation